Semibold feature headings, fix animation clipping, all fonts via Google CDN

--- a/css/convo-new.webflow.css
+++ b/css/convo-new.webflow.css
@@ -5526,6 +5526,7 @@ img {
 
 .image-wrap-column._2 {
   height: 100%;
+  overflow: visible;
 }
 
 .content-column {
